<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorChooserMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:text="@string/color"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">


        <Button
            android:id="@+id/yellowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/yellow"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/orangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/orange"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/redButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/red"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/magentaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/magenta"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/purpleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/purple"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/darkBlueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/darkBlue"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/lightBlueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/lightBlue"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/lightGreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/lightGreen"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/darkGreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/darkGreen"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/blackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/black"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingStart="15dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="15dp"
            android:text="@string/red_slider_label"
            />

        <SeekBar
            android:id="@+id/redSlider"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:progress="0"
            />

        <TextView
            android:id="@+id/valueRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="15dp"
            android:text="@string/value"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingStart="15dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="15dp"
            android:text="@string/green"
            />

        <SeekBar
            android:id="@+id/greenSlider"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:progress="0"
            />

        <TextView
            android:id="@+id/valueGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="15dp"
            android:text="@string/value"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingStart="15dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="15dp"
            android:text="@string/blue"
            />

        <SeekBar
            android:id="@+id/blueSlider"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="255"
            android:progress="0"
            />

        <TextView
            android:id="@+id/valueBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="15dp"
            android:text="@string/value"
            />
    </LinearLayout>

    <Button
        android:id="@+id/currentColor"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/black"
        />

</LinearLayout>