<resources>
    <string name="app_name">Paint</string>
    <string name="lineTypeChooserButton">Choose Line Type</string>
    <string name="toolChooserButton">Choose Drawing Tool</string>
    <string name="colorChooserButton">Choose Color for Drawing Tool</string>
    <string name="saveButton">Save current drawing</string>
    <string name="shapeChooserFragment">Choose Shape</string>
    <string name="stickerChooserFragment">Choose Sticker</string>
    <string name="insertTextFragment">Insert Text</string>
    <string name="drawPointButton">Point</string>
    <string name="drawLineButton">Line</string>
    <string name="drawFillButton">Fill</string>
    <string name="drawSprayCan">Spray Can</string>
    <string name="eraserButton">Eraser</string>
    <string name="drawShapesButton">Shapes</string>
    <string name="drawTextButton">Text</string>
    <string name="drawCameraPicture">Camera</string>
    <string name="path">Path</string>
    <string name="stroke_width">Choose Stroke Width</string>
    <string name="drawing_tool">Choose Drawing Tool</string>
    <string name="color">Choose Color</string>
    <string name="stroke_width_display">5pt</string>
    <string name="choose_line_type">Choose the line type</string>
    <string name="dashed">Dashed Line</string>
    <string name="solid">Solid Line</string>
    <string name="dasheddoted">Dashed-Doted Line</string>
    <string name="doted">Doted Line</string>
    <string name="gallery">Gallery</string>
    <string name="red_slider_label">R:</string>
    <string name="blue">B:</string>
    <string name="green">G:</string>
    <string name="value">0</string>
    <string name="undo_button">Undo</string>
    <string name="redo_button">Redo</string>
    <string name="drawStickerButton">Emojis/Stickers</string>
    <string name="shareButton">Share current drawing</string>
</resources>
